--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <div>
       Position : Fixed!
     </div>
-    <script src="script.js"></script>
+    <!-- <script src="script.js"></script> -->
   </body>
 </html>
