--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
       <div>2</div>
       <div>3</div>
     </div> -->
-    <div>
-      Position : Fixed!
-    </div>
+
+    <!-- <div class="relative">
+      This div element has position: relative;
+      <div class="absolute">This div element has position: absolute;</div>
+    </div> -->
+
     <!-- <script src="script.js"></script> -->
   </body>
 </html>
