--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <!-- <div id="main">
-      <div>1</div>
-      <div>2</div>
-      <div>3</div>
-    </div> -->
+    <div id="main">
+      <div class="one">1</div>
+      <div class="two">2</div>
+      <div class="three">3</div>
+    </div>
 
     <!-- <div class="relative">
       This div element has position: relative;
